--- a/style.css
+++ b/style.css
@@ -23,7 +23,7 @@ h3 {
 
 .row1 {
     margin: 0 15px;
-    height: 70vh;
+    height: 65vh;
     display: flex;
     justify-content: center;
     border: solid 1px black;
@@ -32,7 +32,7 @@ h3 {
 #score {
     border-right: black solid 1px;
     width: 190vh;
-    height: 70vh;
+    height: 64.7vh;
     margin-right: 8vh;
     font-size: 4vh;
 }
@@ -43,12 +43,44 @@ h3 {
     margin-left: 8vh;
 }
 
-.row3 {
-    height: 10vh;
+.row2and3 {
+    height: 20vh;
     display: flex;
+    flex-direction: column;
     justify-content: center;
     align-items: center;
     text-align: center;
+}
+
+.row2 {
+    margin: 4vh 0;
+}
+
+button {
+    font-weight: bold;
+    font-size: larger;
+    padding: 0.5vh;
+    height: 4vh;
+    width: 8vh;
+}
+
+.row3 {
+    margin-bottom: 4vh;
+}
+
+table,
+th {
+    height: 1vh;
+    width: 66vh;
+}
+
+table {
+    border: 0;
+}
+
+table,
+td {
+    height: 6vh;
 }
 
 table,
